syntax = "proto3";

package adagio.rpc.controlplane;

option go_package = "pkg/rpc/controlplane";

import "pkg/adagio/adagio.proto";

service ControlPlane {
  rpc Start(StartRequest) returns (StartResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message StartRequest {
  adagio.GraphSpec spec = 1;
}

message StartResponse {
  adagio.Run run = 1;
}

message ListRequest {}

message ListResponse {
  repeated Run runs = 1;
}
